Fix assets paths

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="hex-container">
-        <img id="hex-img" src="/assets/hex.webp" />
+        <img id="hex-img" src="./assets/hex.webp" />
         <div id="rank-container">
             <h1 id="rank-number" class="rank-number"></h1>
         </div>
