--- a/rank.html
+++ b/rank.html
@@ -16,7 +16,7 @@
     <div id="hex-container">
         <img id="hex-img" src="./assets/hex.webp" />
         <div id="rank-container">
-            <h1 id="rank-number" class="rank-number"></h1>
+            <h1 id="rank-number" class="rank-number">0</h1>
         </div>
 
         <div id="id-container">
