--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div>
                 <label for="id-input">Player ID:</label>
-                <input type="text" id="id-input" placeholder="Player ID number eg. 126212866" />
+                <input type="text" id="id-input" placeholder="eg. 126212866" />
             </div>
 
             <div>
