--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <input type="text" id="h-input" value="500"/>
             </div>
 
+            <a id="permalink" href="./rank.html?playerId=141685197">Example</a>
             <a id="permalink" href="#">Permalink</a>
             <button type="submit" id="submit">Copy code</button>
         </form>
