--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <meta name="description" content="" />
+  <meta name="og:title" content="Blue Lock Dota 2 Leaderboard Counter" />
+  <meta name="og:description" content="Show your Dota 2 rank in style" />
+  <meta name="og:image" content="https://ameamenoame.github.io/bluelock-rank/assets/meta.png" />
+  <meta name="og:type" content="website" />
+
+  <meta name="twitter:title" content="Blue Lock Dota 2 Leaderboard Counter" />
+  <meta name="twitter:description" content="Show your Dota 2 rank in style" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://ameamenoame.github.io/bluelock-rank/assets/meta.png" />
 
   <link rel="stylesheet" href="index.css" />
 </head>
