--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-      <script type='text/javascript' charset='utf-8'>             var iframe = document.createElement('iframe');               document.body.appendChild(iframe);        iframe.src = 'http://localhost:5500/rank.html?playerId=126212866';               iframe.width = '269';        iframe.height = '269';    </script>    
+      <script type='text/javascript' charset='utf-8'>             var iframe = document.createElement('iframe');               document.body.appendChild(iframe);        iframe.src = 'https://ameamenoame.github.io/bluelock-rank/rank.html?playerId=126212866';               iframe.width = '500';        iframe.height = '500';    </script>    
 </body>
 
 <script src="index.js"></script>
