More embed text

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             </div>
 
             <div>
-                <label for="w-input">Width:</label>
+                <label for="w-input">Embed Width:</label>
                 <input type="text" id="w-input" value="500"/>
             </div>
 
             <div>
-                <label for="h-input">Height:</label>
+                <label for="h-input">Embed Height:</label>
                 <input type="text" id="h-input" value="500"/>
             </div>
 
